# cppimagefilterbase

./: CMakeLists.txt  Cfg_Reader.cpp  Cfg_Reader.h  Filter.cpp  Filter.h  FilterBlackWhite.cpp  FilterBlackWhite.h  FilterBlur.cpp  FilterBlur.h  FilterConvolutional.h  FilterEdge.cpp  FilterEdge.h  FilterExtazy.cpp  FilterExtazy.h  FilterRed.cpp  FilterRed.h  FilterThreshold.cpp  FilterThreshold.h  FilterWhiteBlack.cpp  FilterWhiteBlack.h  FilterСonvolutional.cpp  PixelRGB.h  main.cpp
